Add mocha, chai, jsdom

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babelify": "^6.3.0",
     "bower": "^1.6.3",
     "browserify": "^11.2.0",
+    "chai": "^3.4.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
@@ -47,6 +48,8 @@
     "gulp-streamify": "1.0.2",
     "gulp-uglify": "^1.4.2",
     "gulp-util": "^3.0.6",
+    "jsdom": "^7.0.2",
+    "mocha": "^2.3.3",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.4.0"
   },
