--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "main": "server.js",
   "scripts": {
     "start": "babel-node server.js",
+    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive",
     "watch": "nodemon --exec babel-node -- server.js",
     "postinstall": "bower install && gulp build"
   },
@@ -34,6 +35,8 @@
     "xml2js": "^0.4.13"
   },
   "devDependencies": {
+    "babel-core": "^5.8.25",
+    "babel-loader": "^5.3.2",
     "babelify": "^6.3.0",
     "bower": "^1.6.3",
     "browserify": "^11.2.0",
@@ -48,7 +51,7 @@
     "gulp-streamify": "1.0.2",
     "gulp-uglify": "^1.4.2",
     "gulp-util": "^3.0.6",
-    "jsdom": "^7.0.2",
+    "jsdom": "^3.1.2",
     "mocha": "^2.3.3",
     "react": "^0.14.0",
     "react-addons-test-utils": "^0.14.0",
